--- a/index.html
+++ b/index.html
@@ -774,10 +774,10 @@
                 tags: ["Utility"]
             },
             {
-                name: "dwight_vercel",
+                name: "dwight",
                 repoUrl: "https://github.com/Nivetha200111/dwight_vercel",
                 liveUrl: "https://dwightvercel.vercel.app",
-                description: "Fan site utility.",
+                description: "Digital ACO twin.",
                 language: "Python",
                 stack: ["Python", "React", "Next.js", "Vercel", "Git"],
                 tags: ["Web"]
@@ -1126,7 +1126,7 @@
             const [activeSkill, setActiveSkill] = useState(null); 
             const [hoveredProject, setHoveredProject] = useState(null); 
             
-            const featuredNames = ["ApplyX", "problemstosolve", "servicenowplanner", "goggins-study"];
+            const featuredNames = ["ApplyX", "problemstosolve", "servicenowplanner", "goggins-study", "dwight"];
             const featuredProjects = PROJECTS.filter(p => featuredNames.includes(p.name));
             const otherProjects = PROJECTS.filter(p => !featuredNames.includes(p.name));
 
