--- a/public/index.html
+++ b/public/index.html
@@ -723,7 +723,7 @@
                 name: "ApplyX",
                 repoUrl: "https://github.com/Nivetha200111/applyx",
                 liveUrl: "https://applyx.vercel.app",
-                description: "Stop wasting hours filling out repetitive job applications. Our intelligent bot automatically applies to relevant positions across multiple job boards.",
+                description: "AI-powered job application automation platform that streamlines the job search process by intelligently applying to relevant positions across multiple job boards based on your skills and preferences.",
                 language: "TypeScript",
                 stack: ["TypeScript", "Next.js", "React", "Python", "PostgreSQL", "Git", "Vercel", "OpenAI API"],
                 tags: ["Automation", "AI"]
@@ -732,7 +732,7 @@
                 name: "problemstosolve",
                 repoUrl: "https://github.com/Nivetha200111/problemstosolve",
                 liveUrl: "https://problemstosolve.vercel.app",
-                description: "A site that helps you find the worlds unique problems.",
+                description: "A curated platform that discovers and showcases unique real-world problems waiting to be solved by innovators and entrepreneurs.",
                 language: "Python",
                 stack: ["Python", "Next.js", "React", "Vercel"],
                 tags: ["Web", "Algorithm"]
@@ -741,7 +741,7 @@
                 name: "servicenowplanner",
                 repoUrl: "https://github.com/Nivetha200111/servicenowplanner",
                 liveUrl: "https://servicenowplanner.vercel.app",
-                description: null,
+                description: "ServiceNow-integrated planning tool that helps teams manage IT service management workflows and project timelines efficiently.",
                 language: "JavaScript",
                 stack: ["JavaScript", "React", "Node.js", "Git", "Vercel"],
                 tags: ["SaaS"]
@@ -750,7 +750,7 @@
                 name: "goggins-study",
                 repoUrl: "https://github.com/Nivetha200111/goggins-study",
                 liveUrl: "https://goggins-study.vercel.app",
-                description: "Discipline tracking application.",
+                description: "Productivity and discipline tracking app inspired by David Goggins' philosophy, helping users build mental toughness and accountability habits.",
                 language: "TypeScript",
                 stack: ["TypeScript", "React", "Vercel", "Git"],
                 tags: ["Productivity"]
@@ -759,7 +759,7 @@
                 name: "Bindora",
                 repoUrl: "https://github.com/Nivetha200111/Bindora",
                 liveUrl: "https://bindora.vercel.app",
-                description: "Smart organizational tool.",
+                description: "An intelligent digital binder and organizational platform designed to help students manage coursework, assignments, and study materials efficiently.",
                 language: "Python",
                 stack: ["Python", "Flask", "SQL", "Vercel", "Git"],
                 tags: ["Education"]
@@ -768,7 +768,7 @@
                 name: "LunchTube",
                 repoUrl: "https://github.com/Nivetha200111/LunchTube",
                 liveUrl: "https://lunch-tube.vercel.app",
-                description: "Decide what to eat effortlessly.",
+                description: "A fun decision-making tool that helps you discover what to eat by combining video content with meal recommendations.",
                 language: "TypeScript",
                 stack: ["TypeScript", "React", "Next.js", "Vercel", "Git"],
                 tags: ["Utility"]
@@ -777,7 +777,7 @@
                 name: "dwight",
                 repoUrl: "https://github.com/Nivetha200111/dwight_vercel",
                 liveUrl: "https://dwightvercel.vercel.app",
-                description: "Digital ACO twin.",
+                description: "Neural ACO Emergency Response Simulator combining neural-augmented ant-colony optimization, IoT sensor fusion, LSTM fire prediction, and Q-learning for smart-building evacuation scenarios.",
                 language: "Python",
                 stack: ["Python", "React", "Next.js", "Vercel", "Git"],
                 tags: ["Web"]
