--- a/public/index.html
+++ b/public/index.html
@@ -1093,7 +1093,202 @@
             );
         };
 
-        const Header = () => {
+        const SkillMatcherModal = ({ onClose }) => {
+            const [selectedSkills, setSelectedSkills] = useState([]);
+            const [isUnlocked, setIsUnlocked] = useState(false);
+            const [showDownload, setShowDownload] = useState(false);
+
+            const handleSkillClick = (skill) => {
+                if (selectedSkills.includes(skill)) {
+                    setSelectedSkills(selectedSkills.filter(s => s !== skill));
+                } else if (selectedSkills.length < 3) {
+                    const newSelected = [...selectedSkills, skill];
+                    setSelectedSkills(newSelected);
+
+                    if (newSelected.length === 3) {
+                        setTimeout(() => setIsUnlocked(true), 300);
+                        setTimeout(() => setShowDownload(true), 1200);
+                    }
+                }
+            };
+
+            const matchingProjects = PROJECTS.filter(p =>
+                selectedSkills.some(skill => p.stack?.includes(skill))
+            );
+
+            return (
+                <AnimatePresence>
+                    <motion.div
+                        className="fixed inset-0 z-50 flex items-center justify-center p-4"
+                        initial={{ opacity: 0 }}
+                        animate={{ opacity: 1 }}
+                        exit={{ opacity: 0 }}
+                        onClick={onClose}
+                    >
+                        <motion.div
+                            className="absolute inset-0 bg-black/90 backdrop-blur-lg"
+                            initial={{ opacity: 0 }}
+                            animate={{ opacity: 1 }}
+                        />
+
+                        <motion.div
+                            className="relative w-full max-w-4xl bg-card border border-white/10 rounded-3xl p-8 md:p-12 shadow-2xl"
+                            onClick={(e) => e.stopPropagation()}
+                            initial={{ scale: 0.9, opacity: 0 }}
+                            animate={{ scale: 1, opacity: 1 }}
+                            transition={{ type: "spring", duration: 0.5 }}
+                        >
+                            <button
+                                onClick={onClose}
+                                className="absolute top-6 right-6 p-2 rounded-full hover:bg-white/10 text-gray-400 hover:text-white transition-colors z-10"
+                            >
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2">
+                                    <line x1="18" y1="6" x2="6" y2="18"></line>
+                                    <line x1="6" y1="6" x2="18" y2="18"></line>
+                                </svg>
+                            </button>
+
+                            <div className="text-center mb-8">
+                                <motion.div
+                                    className="inline-flex items-center justify-center mb-4"
+                                    animate={isUnlocked ? { scale: [1, 1.2, 1], rotate: [0, 360] } : {}}
+                                    transition={{ duration: 0.6 }}
+                                >
+                                    {isUnlocked ? (
+                                        <svg width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" className="text-accent">
+                                            <rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect>
+                                            <path d="M7 11V7a5 5 0 0 1 9.9-1"></path>
+                                        </svg>
+                                    ) : (
+                                        <svg width="64" height="64" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" className="text-gray-500">
+                                            <rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect>
+                                            <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
+                                        </svg>
+                                    )}
+                                </motion.div>
+
+                                <h2 className="text-3xl md:text-4xl font-bold mb-3">
+                                    {isUnlocked ? "Perfect Match! 🎯" : "Unlock My Resume"}
+                                </h2>
+
+                                <p className="text-gray-400 text-lg">
+                                    {isUnlocked
+                                        ? `Great! I've built ${matchingProjects.length} project${matchingProjects.length !== 1 ? 's' : ''} with ${selectedSkills.join(', ')}`
+                                        : `Select 3 skills you're hiring for`
+                                    }
+                                </p>
+
+                                <div className="flex justify-center gap-2 mt-4">
+                                    {[0, 1, 2].map(i => (
+                                        <motion.div
+                                            key={i}
+                                            className={`w-3 h-3 rounded-full ${i < selectedSkills.length ? 'bg-accent' : 'bg-gray-700'}`}
+                                            animate={i < selectedSkills.length ? { scale: [1, 1.3, 1] } : {}}
+                                        />
+                                    ))}
+                                </div>
+                            </div>
+
+                            <div className="relative w-full h-[400px] bg-background/50 rounded-2xl border border-white/5 overflow-hidden mb-6">
+                                <div className="absolute inset-0 opacity-10 pointer-events-none"
+                                     style={{ backgroundImage: 'radial-gradient(circle, #444 1px, transparent 1px)', backgroundSize: '30px 30px' }} />
+
+                                <div className="relative w-full h-full p-8">
+                                    {RAW_SKILLS.map((skill, index) => {
+                                        const isSelected = selectedSkills.includes(skill);
+                                        const angle = (index / RAW_SKILLS.length) * Math.PI * 2;
+                                        const radius = 35;
+                                        const x = 50 + radius * Math.cos(angle);
+                                        const y = 50 + radius * Math.sin(angle);
+
+                                        return (
+                                            <motion.button
+                                                key={skill}
+                                                className={`absolute cursor-pointer px-3 py-1.5 rounded-lg font-medium transition-all select-none ${
+                                                    isSelected
+                                                        ? 'bg-accent text-white border-2 border-accent shadow-[0_0_20px_rgba(139,92,246,0.6)] z-20'
+                                                        : 'bg-white/5 text-gray-300 border border-white/10 hover:bg-white/10 hover:border-accent/50'
+                                                }`}
+                                                style={{ left: `${x}%`, top: `${y}%`, transform: 'translate(-50%, -50%)' }}
+                                                onClick={() => handleSkillClick(skill)}
+                                                animate={isSelected ? {
+                                                    scale: [1, 1.1, 1],
+                                                    boxShadow: ['0 0 20px rgba(139,92,246,0.6)', '0 0 30px rgba(139,92,246,0.8)', '0 0 20px rgba(139,92,246,0.6)']
+                                                } : {}}
+                                                transition={{ duration: 0.3 }}
+                                                whileHover={!isSelected ? { scale: 1.05 } : {}}
+                                            >
+                                                {skill}
+                                            </motion.button>
+                                        );
+                                    })}
+                                </div>
+
+                                {isUnlocked && (
+                                    <motion.div
+                                        className="absolute inset-0 pointer-events-none"
+                                        initial={{ opacity: 0 }}
+                                        animate={{ opacity: 1 }}
+                                    >
+                                        {[...Array(20)].map((_, i) => (
+                                            <motion.div
+                                                key={i}
+                                                className="absolute w-2 h-2 bg-accent rounded-full"
+                                                style={{
+                                                    left: `${50}%`,
+                                                    top: `${50}%`,
+                                                }}
+                                                animate={{
+                                                    x: [0, (Math.random() - 0.5) * 400],
+                                                    y: [0, (Math.random() - 0.5) * 400],
+                                                    opacity: [1, 0],
+                                                    scale: [1, 0]
+                                                }}
+                                                transition={{ duration: 1, ease: "easeOut" }}
+                                            />
+                                        ))}
+                                    </motion.div>
+                                )}
+                            </div>
+
+                            <AnimatePresence>
+                                {showDownload && (
+                                    <motion.div
+                                        initial={{ opacity: 0, y: 20 }}
+                                        animate={{ opacity: 1, y: 0 }}
+                                        className="text-center"
+                                    >
+                                        <motion.a
+                                            href="/resume.pdf"
+                                            download
+                                            className="inline-flex items-center gap-3 px-8 py-4 bg-accent hover:bg-accent/90 text-white font-bold rounded-full transition-all shadow-[0_0_30px_rgba(139,92,246,0.5)] hover:shadow-[0_0_40px_rgba(139,92,246,0.7)]"
+                                            whileHover={{ scale: 1.05 }}
+                                            whileTap={{ scale: 0.95 }}
+                                        >
+                                            <Icon name="download" size={20} />
+                                            Download Resume
+                                        </motion.a>
+
+                                        {matchingProjects.length > 0 && (
+                                            <motion.p
+                                                className="mt-4 text-sm text-gray-500"
+                                                initial={{ opacity: 0 }}
+                                                animate={{ opacity: 1 }}
+                                                transition={{ delay: 0.3 }}
+                                            >
+                                                Check out: {matchingProjects.slice(0, 3).map(p => p.name).join(', ')}
+                                            </motion.p>
+                                        )}
+                                    </motion.div>
+                                )}
+                            </AnimatePresence>
+                        </motion.div>
+                    </motion.div>
+                </AnimatePresence>
+            );
+        };
+
+        const Header = ({ onResumeClick }) => {
             const [scrolled, setScrolled] = useState(false);
             useEffect(() => {
                 const handleScroll = () => setScrolled(window.scrollY > 20);
@@ -1114,7 +1309,9 @@
                         </nav>
                         <motion.div initial={{ opacity: 0, x: 20 }} animate={{ opacity: 1, x: 0 }} className="flex items-center gap-4">
                             <a href="https://github.com/Nivetha200111" target="_blank" className="p-2 hover:bg-white/10 rounded-full transition-colors text-gray-400 hover:text-white"><Icon name="github" size={20} /></a>
-                            <a href="/resume.pdf" className="hidden sm:flex items-center gap-2 text-sm bg-white/5 hover:bg-white/10 px-4 py-2 rounded-full transition-colors border border-white/10"><Icon name="download" size={14} /> Resume</a>
+                            <button onClick={onResumeClick} className="hidden sm:flex items-center gap-2 text-sm bg-white/5 hover:bg-white/10 px-4 py-2 rounded-full transition-colors border border-white/10">
+                                <Icon name="download" size={14} /> Resume
+                            </button>
                         </motion.div>
                     </div>
                 </header>
@@ -1123,9 +1320,10 @@
 
         const App = () => {
             const [selectedProject, setSelectedProject] = useState(null);
-            const [activeSkill, setActiveSkill] = useState(null); 
-            const [hoveredProject, setHoveredProject] = useState(null); 
-            
+            const [activeSkill, setActiveSkill] = useState(null);
+            const [hoveredProject, setHoveredProject] = useState(null);
+            const [showSkillMatcher, setShowSkillMatcher] = useState(false);
+
             const featuredNames = ["ApplyX", "problemstosolve", "servicenowplanner", "goggins-study", "dwight"];
             const featuredProjects = PROJECTS.filter(p => featuredNames.includes(p.name));
             const otherProjects = PROJECTS.filter(p => !featuredNames.includes(p.name));
@@ -1133,7 +1331,7 @@
             return (
                 <div className="min-h-screen selection:bg-accent selection:text-white pb-20 text-gray-200">
                     <div className="noise-bg" />
-                    <Header />
+                    <Header onResumeClick={() => setShowSkillMatcher(true)} />
 
                     <main>
                         {/* HERO */}
@@ -1225,6 +1423,7 @@
                     </main>
                     <footer className="py-8 text-center text-gray-600 text-sm border-t border-white/5"><p>Designed & Built by Nivetha Sivakumar</p></footer>
                     <ProjectModal project={selectedProject} onClose={() => setSelectedProject(null)} />
+                    {showSkillMatcher && <SkillMatcherModal onClose={() => setShowSkillMatcher(false)} />}
                 </div>
             );
         };
